--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="home">
         <div class="content">
-            <h2>Hi, I'm <span>Somnath Ganguly</span></h2>
+            <h2>Hi, I'm <span> </span></h2>
             <h4>Frontend Developer</h4>
             <p>Looking for new work opportunities </p>
             <div class="btn-group">
